supporting "percentage fee" additional items (#1357)
* initial work for supporting "percentage fee" additional items

* WIP list page

* WIP: preview markdown content

* WIP edit form

* add available quantity

* improve styling

* fix reservation API

* fix list + add

* fix error when defining decimal percentage

* fields validation

* edit / delete item

* fix compilation issue

* fix broken test

* reload list on save

* implement feedback; remove growl

* fix compilation errors after merge

* fix form errors

* public UI modifications

* apply suggested modifications

* fix sonar warnings